dec 2 moved years

--- a/jde.html
+++ b/jde.html
@@ -34,7 +34,6 @@
             <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
-					<h2 class="text-wrapper-4">2024</h2>
                   	<h2 class="text-wrapper-4">JACOBS DOUWE EGBERTS</h2>
                 </div>
                 <span class="text-wrapper-5">[whitelabel design system]</span>
@@ -59,6 +58,8 @@
               <li>Accessibility & performance</li>
               <li>Front-end implementation</li>
             </ul>
+
+            <ul class="project-specs">2024</ul>
         </section>
 
         <section class="visuals-section grid-col-7of12">
