--- a/montblanc.html
+++ b/montblanc.html
@@ -35,7 +35,6 @@
             <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
-					<h2 class="text-wrapper-4">2023</h2>
                   	<h2 class="text-wrapper-4">MONTBLANC DIGITAL PAPER</h2>
                 </div>
                 <span class="text-wrapper-5">[e-ink experience]</span>
@@ -61,7 +60,9 @@
               <li>Typography</li>
               <li>UX Research & Strategy</li>
               <li>Interaction Design</li>
-          </ul>
+            </ul>
+
+            <ul class="project-specs">2023</ul>
         </section>
 
         <section class="visuals-section grid-col-7of12">
