--- a/alice.html
+++ b/alice.html
@@ -36,7 +36,6 @@
                 <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
-					<h2 class="text-wrapper-4">2019</h2>
                   	<h2 class="text-wrapper-4">ALICE'S ADVENTURES IN WONDERLAND</h2>
                 </div>
                 <span class="text-wrapper-5">[print]</span>
@@ -54,6 +53,8 @@
                     <li>Layout Design</li>
                     <li>Coptic Stitch Binding</li>
                 </ul>
+
+                <ul class="project-specs">2019</ul>
             </section>
 
             <section class="grid-col-4of12">
