--- a/marinaAbramovic.html
+++ b/marinaAbramovic.html
@@ -34,7 +34,6 @@
             <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
-					<h2 class="text-wrapper-4">2024</h2>
                   	<h2 class="text-wrapper-4">MARINA ABRAMOVIĆ</h2>
                 </div>
                 <span class="text-wrapper-5">[microsite]</span>
@@ -51,6 +50,7 @@
             <ul class="project-specs">
               <li>Duration: 3 hours</li>
             </ul>
+            <ul class="project-specs">2024</ul>
         </section>
 
         <section class="visuals-section grid-col-7of12">
