--- a/puma.html
+++ b/puma.html
@@ -35,7 +35,6 @@
 			<div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
-					<h2 class="text-wrapper-4">2019</h2>
                   	<h2 class="text-wrapper-4">PUMA: RUN MY WAY 管我怎么跑</h2>
                 </div>
                 <span class="text-wrapper-5">[interactive installation]</span>
@@ -55,7 +54,9 @@
             <ul class="project-specs">
               <li>Gesture-based Interaction Design</li>
               <li>Physical & digital touchpoint user flows</li>
-          </ul>
+          	</ul>
+
+			<ul class="project-specs">2019</ul>
         </section>
 
         <section class="visuals-section grid-col-7of12">
