--- a/toyota.html
+++ b/toyota.html
@@ -35,7 +35,6 @@
             <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
-					<h2 class="text-wrapper-4">2022</h2>
                   	<h2 class="text-wrapper-4">TOYOTA</h2>
                 </div>
                 <span class="text-wrapper-5">[global navigation]</span>
@@ -60,8 +59,10 @@
               <li>Interaction Design</li>
               <li>User Research and Testing</li>
               <li>Cross-Market Strategy</li>
-              <li>Accessibility and Usability</li>
+              <li>Accessibility and Usability</li>s
             </ul>
+
+            <ul class="project-specs">2022</ul>
         </section>
 
         <!--
