--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
  
       <div class="about-paragraph">
         <p>
-          HHey! I'm Maggie, a Product Designer in Amsterdam. I've always had the need to touch and tinker with everything (museums are dangerous 👀). I love finding the little surprises in an experience, the tiny details that make me go “oooh, that's fun!”. My inspiration comes from everywhere: busy city streets, quiet mountain villages, or even random conversations. → Talk to me ← →<a href="mailto:maggieliujx@gmail.com"> Talk to me </a>←
+          HHey! I'm Maggie, a Product Designer in Amsterdam. I've always had the need to touch and tinker with everything (museums are dangerous 👀). I love finding the little surprises in an experience, the tiny details that make me go “oooh, that's fun!”. My inspiration comes from everywhere: busy city streets, quiet mountain villages, or even random conversations. →<a href="mailto:maggieliujx@gmail.com"> Talk to me </a>←
         </p>
         <br>
         <h2 style="font-family: spaceMono; font-weight: 600;">EXPERIENCES</h2>
