--- a/jde.html
+++ b/jde.html
@@ -45,10 +45,10 @@
         -->
 
             <p>
-                With a rapidly growing portfolio of coffee brands worldwide, Jacobs Douwe Egberts (JDE) needed a scalable design solution to unify their digital presence while preserving each brand's unique identity. Many of the brands lacked formal design guidelines, leading to inconsistent user experiences and inefficient development cycles.
+                With a rapidly growing portfolio of coffee brands worldwide, Jacobs Douwe Egberts (JDE) needed a scalable design system to unify their digital presence. The challenge was that many of the brands lacked formal design guidelines, leading to inconsistent experiences and inefficiencies.
             </p>
             <p>
-                I was brought in as a product designer to lead the creation and implementation of a white-label design system — one that can be easily adapted across 40+ brands, streamline collaboration between design and development, and support rapid onboarding of new brands into their ecosystem.
+                I led the creation and implementation of a white-label design system that adapted across 40+ brands. It streamlined collaboration between design and development, and supported faster onboarding of new brands.
             </p>
 
             <ul class="project-specs">
@@ -77,7 +77,7 @@
                 Before defining new styles or components, I conducted a thorough audit of JDE's partially built design system to understand what existed, what could be reused, and where gaps remained.
             </p>
             <p>
-                From there, we set up foundational styles using design tokens, which let us store core design decisions like colours, typography, spacing, and more. By giving each token a clear role, we can create themes—sets of token values that define the look and feel of a brand. And applying different themes to the same components allows each brand to express their unique visual identity while keeping a shared structure.
+                From there, we set up foundational styles using design tokens, which let us store core design decisions like colours and spacing. By giving each token a clear role, we can create themes that set the look and feel of a brand. Applying different themes to the same components lets each brand show its own visual identity while keeping the same underlying structure.
             </p>
         </section>
 
@@ -94,13 +94,13 @@
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Balancing Brand Identity and Accessibility</h2>
             <p>
-                A major challenge was keeping accessibility consistent across multiple brands. Most brand books we received were designed for print or packaging—not digital—so their colours often failed accessibility standards.
+                A major challenge was keeping accessibility consistent across multiple brands. Most brand books we received were designed for print, so their colours often failed digital accessibility standards.
             </p>
             <p>
-                To solve this, we used palette generators to build accessible colour sets using each brand's primary colour as the base. We worked closely with the brands to ensure these adjustments maintain proper contrast while still preserving each brand's visual identity.
+                To solve this, we used palette generators to build accessible colour sets based on each brand's primary colour. We worked closely with each brand team to ensure these adjustments maintained proper contrast while keeping their visual identity.
             </p>
             <p>
-                We still used the brand's primary colour in other ways—accents, highlights, or secondary moments.
+                We still used the brand's primary colour in other ways: accents, highlights, or secondary moments.
             </p>
         </section>
 
@@ -115,7 +115,7 @@
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Beyond the White-Label</h2>
             <p>
-                Even with a flexible white-label system, some brands still need a few tweaks. In those cases, we introduce a small number of custom components that reuse as many of the system's building blocks as possible—keeping the system efficient while giving the brand room to express itself.
+                Even with a flexible white-label system, some brands still need a few tweaks. In those cases, we introduce a small number of custom components that reuse as many of the system's building blocks as possible, while giving the brand room to express itself.
             </p>
         </section>
 
