--- a/jde.html
+++ b/jde.html
@@ -131,7 +131,7 @@
         </section>
     </div>
 
-    <div class="grid-row">
+    <div class="grid-row" style="width:calc(100% - 24px)">
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Dev-Design Alignment</h2>
             <p>
