--- a/marinaAbramovic.html
+++ b/marinaAbramovic.html
@@ -29,7 +29,7 @@
     <div id="site-header"></div>
     
     <div class="grid-row">
-        <section class="writeup-section grid-col-5of12">
+        <section class="writeup-section grid-col-4of12">
 
             <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
@@ -44,7 +44,13 @@
             <h1 class="project-title">MARINA ABRAMOVIĆ</h1>
         -->
             <p>
-                During an internal design hackathon, I had to create an attention-grabbing first fold for a virtual (made-up) event landing page. The goal was to showcase the event's key details, highlight its value proposition, and incorporate interactive elements that spark user interest and participation.
+                During an internal design hackathon, each team member created an attention-grabbing first fold for a virtual event landing page. The goal was to highlight the event's value prioposition and include interactive elements that spark curiosity and participation.
+            </p>
+            <p>
+                I designed an immersive online version of 'The House with the Ocean View,' letting users explore every angle of the 12-day performance and connect with the performer at their own pace.
+            </p>
+            <p>
+                Playful micro-animations give users a sneak peek and invite them to dive in.
             </p>
 
             <ul class="project-specs">
@@ -53,7 +59,7 @@
             <ul class="project-specs">2024</ul>
         </section>
 
-        <section class="visuals-section grid-col-7of12">
+        <section class="visuals-section grid-col-8of12">
             <div class="project-image">
                 <img src="media/marina/marina_cover.png">
             </div>
