--- a/marinaAbramovic.html
+++ b/marinaAbramovic.html
@@ -47,7 +47,7 @@
                 During an internal design hackathon, each team member created an attention-grabbing first fold for a virtual event landing page. The goal was to highlight the event's value prioposition and include interactive elements that spark curiosity and participation.
             </p>
             <p>
-                I designed an immersive online version of 'The House with the Ocean View,' letting users explore every angle of the 12-day performance and connect with the performer at their own pace.
+                I designed an immersive online version of 'The House with the Ocean View,' letting users explore every angle of the 12-day live performance and connect with the performer at their own pace.
             </p>
             <p>
                 Playful micro-animations give users a sneak peek and invite them to dive in.
@@ -68,6 +68,19 @@
 
     <div class="marina-prototype">
         <iframe class="marina-iframe" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/kYSarqITUT7mrReV6Sdwe5/PD-Hackathon---Marina-Abramovi%C4%87--10_05_2024-?page-id=23%3A1048&node-id=9-22&viewport=193%2C250%2C0.4&scaling=scale-down&content-scaling=fixed&starting-point-node-id=9%3A22&embed-host=share" allowfullscreen></iframe>
+    </div>
+
+    <div class="outcome-section">
+        <div class="wrapper">
+            <div class="title">
+                <h2>Feedback and Takeaways</h2>
+            </div>
+            <div class="body">
+                <p>
+                    The feedback highlighted that the concept and interactions were fun, engaging, and matched Marina's style, which helped to draw people in. However, it wasn't always clear what the exhibition was about for someone unfamiliar with her work. Given more time, I would focus on making the event and what visitors can expect more explicit.
+                </p>
+            </div>
+        </div>
     </div>
     
 
