--- a/lufthansa.html
+++ b/lufthansa.html
@@ -258,7 +258,7 @@
 
 	<footer class="hidden">
         <div class="site-footer" id="next-project">
-            <a href="alice.html" id="next-project-link">
+            <a href="marinaAbramovic.html" id="next-project-link">
                 <div class="next-project-content">
                     <div class="next-project-text">
                         <p>Next Project</p>
