--- a/montblanc.html
+++ b/montblanc.html
@@ -502,7 +502,7 @@
 
     <footer class="hidden">
         <div class="site-footer" id="next-project">
-            <a href="photography.html" id="next-project-link">
+            <a href="toyota.html" id="next-project-link">
                 <div class="next-project-content">
                     <div class="next-project-text">
                         <p>Next Project</p>
