--- a/montblanc.html
+++ b/montblanc.html
@@ -30,7 +30,7 @@
     <div id="site-header"></div>
 
     <div class="grid-row">
-        <section class="writeup-section grid-col-5of12">
+        <section class="writeup-section grid-col-4of12">
 
             <div class="frame-3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
@@ -45,13 +45,13 @@
             <h1 class="project-title">MONTBLANC</h1>
         -->
             <p>
-                Montblanc, a legacy brand renowned for its mastery in luxury writing instruments, has continuously evolved to cater to the modern achiever. The brand embarked on a bold journey to merge the timeless elegance of handwriting with the cutting-edge digital experience of an e-ink device.
+                Montblanc, a legacy brand renowned for its luxury writing instruments, has set out on an ambitious journey to bring the traditional feel of handwriting into the digital world.
             </p>
             <p>
-                Over two years, we worked closely with Montblanc to shape the vision, define the digital identity, build the design system, craft the user experience, refine haptics, and support industrial design alongside their writing experts in Hamburg.
+                Over two years, we worked closely with Montblanc to shape the vision, define the digital identity, build the design system, and craft the user experience.
             </p>
             <p>
-                Digital Paper reimagines the art of writing for the modern age. It captures the emotion and nuance of pen on paper—from rubberised nibs that add weight to each stroke, to haptics tuned to echo the flow of ink—celebrating Montblanc's century-long dedication to the writing ritual.
+                Digital Paper captures the emotion and nuance of pen on paper, with nibs that give weight to every stroke and haptics that mimic the flow of ink. 
             </p>
 
             <ul class="project-specs">
@@ -65,7 +65,7 @@
             <ul class="project-specs">2023</ul>
         </section>
 
-        <section class="visuals-section grid-col-7of12">
+        <section class="visuals-section grid-col-8of12">
             <div class="project-video">
                 <video src="media/mb/vd/mb_cover.mp4" autoplay loop muted></video>
             </div>
@@ -77,7 +77,7 @@
             <section class="writeup-section grid-col-4of12">
                 <h2 class="section-title">Immersion</h2>
                 <p>
-                    To kick off the project, we spent a week embedded with the Montblanc team in Hamburg — where we explored the brand's rich history, delved into their archives, and interacted with early prototypes of the device. This immersion helped us further understand Montblanc's values, craft, and ambition for their new writing device.
+                    To kick off the project, we spent a week with the Montblanc team in Hamburg. We explored the brand's rich history, delved into their archives, and played with early device prototypes. This immersion helped us further understand Montblanc's values, craft, and ambition for their new writing device.
                 </p>
             </section>
 
@@ -111,17 +111,17 @@
     </div>
 
 
-    <div class="grid-row">
+    <div class="grid-row" style="width:calc(100% - 24px)">
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">The Beauty of Handwriting</h2>
             <p>
-                We set out to capture the soulfulness of handwriting in a digital context. Inspired by Montblanc's long heritage in fine writing instruments, we explored four distinct visual territories to define the right direction. This exploration helped us narrow down to two core creative concepts, ultimately shaping the final visual identity.
+                Our goal was to bring the feel of ink on paper into an e-ink environment, keeping the natural imperfections, pressure, and personal expression that make handwriting feel uniquely human.
             </p>
             <p>
-                Our goal was to bring the feel of ink on paper into an e-ink environment—preserving the natural imperfections, pressure, and personal expression that make handwriting uniquely human.
+                We explored four visual directions and refined them into two core concepts, forming a final identity built from eight key elements.
             </p>
             <p>
-                Values: Soulfulness, timelessness and simplicity.
+                Values: Soulfulness / Timelessness / Simimplicity
             </p>
             
         </section>
