--- a/montblanc.html
+++ b/montblanc.html
@@ -138,9 +138,13 @@
             <section class="writeup-section grid-col-4of12">
                 <h2 class="section-title">Type</h2>
                 <p>
-                    Ligatures and handcrafted letterforms play a central role. By mimicking the organic flow and variation of handwritten strokes, typography becomes a bridge between analog craft and digital clarity.            </p>
+                    We wanted the type to feel handwritten but still readable, so we began by writing on paper. This let us capture the tiny imperfections, like the tremble in a line or the natural taper of a stroke. The result is a beautiful ink-led experience that became our Signature Headers.
+                </p>
                 <p>
-                    Designing letterforms on paper allowed us to retain microscopic imperfections—the slight tremble of a line, the uneven taper. These qualities create a writing system that feels authentically “written” instead of generated.
+                    Our Headers use a font with randomized ligatures that give off a realistic, handcrafted look.
+                </p>
+                <p>
+                    Montblanc's default type keeps body text and labels redable and consistent.
                 </p>
             </section>
 
@@ -185,13 +189,10 @@
                 <div class="vertical-stack">
                     <h2 class="section-title">The Line</h2>
                     <p>
-                        The line embraces the craft and DNA of writing, with all its perfections and imperfections.
-                    </p>
-                    <p>
-                        For over a hundred years, the figure 8 has been used by trained calligraphers to test the nibs at the start of every pen's journey. We've brought this iconic gesture to the experience as a way to introduce users to the feel of the device.
+                        The line celebrates the craft and DNA of writing. The figure 8, used by calligraphers for over a hundred years to test nibs, is incorporated into the onboarding flow to introduce users to the feel of the device.
                     </p>
                 
-                    <img src="media/mb/img/line_2.png">
+                    <!--<img src="media/mb/img/line_2.png">-->
                     <img src="media/mb/img/line_3.png">
                 </div>
             </section>
@@ -214,7 +215,7 @@
             <div class="vertical-stack">
                 <h2 class="section-title">Buttons & Links</h2>
                 <p>
-                    UI elements used repeatedly—such as pagination indicators or highlight states—carry subtle stroke variations to emulate ink pressure. Starting points, end points, and stroke widths adjust organically, reinforcing the tactile feel of handwriting throughout the interface.
+                    UI elements used repeatedly, such as pagination indicators or highlight states, carry subtle stroke variations to mimic ink pressure. Starting points, end points, and stroke widths adjust organically, reinforcing the tactile feel of handwriting throughout the interface.
                 </p>
                 <p>
                     This creates a system where even functional UI elements carry the warmth and rhythm of pen-on-paper writing.
@@ -241,7 +242,7 @@
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Iconography</h2>
             <p>
-                Our icons reflect the essence of the line — capturing subtle imperfections from pen pressure and angle. While they nod to the tactile nature of handwriting, they remain clean and modern, balancing handcrafted warmth with UI clarity.
+                Our icons reflect the essence of the line, capturing subtle imperfections from pen pressure and angle. While they nod to the tactile nature of handwriting, they remain clean and modern, balancing handcrafted warmth with UI clarity.
             </p>
         </section>
 
@@ -256,7 +257,7 @@
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Colour</h2>
             <p>
-                Our colour system is optimized for e-ink, using a refined grayscale palette to ensure clarity, contrast, and a quiet, premium feel.
+                Our colour system is optimized for e-ink, using a refined grayscale palette that ensures contrast while mainteining a quiet, premium feel.
             </p>
         </section>
 
@@ -271,7 +272,7 @@
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Layouts & Grids</h2>
             <p>
-                The layout takes inspiration from Montblanc's symbolic 4810m height — using a 4/8/10 column grid to subtly embed the brand into the interface structure.
+                The layout grid takes inspiration from Montblanc's symbolic height of 4810m, embedding a subtle brand signature into the structure of the interface.
             </p>
         </section>
 
@@ -329,7 +330,7 @@
                 We defined the interaction model through research into existing e-ink devices and real-world handwriting behaviours.
             </p>
             <p>
-                The focus: an intuitive, unobtrusive flow that keeps writing at the centre. Interactions feel intentional yet effortless—always supporting the user's creative or practical task.
+                The focus: an intuitive, unobtrusive flow that keeps writing at the centre. Interactions feel intentional yet effortless, always supporting the user's creative or practical task.
             </p>
         </section>
 
@@ -345,10 +346,10 @@
             <section class="writeup-section grid-col-5of12">
                 <h2 class="section-title">Onboarding Flow</h2>
                 <p>
-                    The onboarding experience mixes Montblanc's storytelling with light, playful moments. Instead of overwhelming users, it gently walks them through the core features — from how the writing feels to small nods to Montblanc's craft, like nib-testing gestures and pressure-sensitive strokes.
+                    The onboarding experience mixes Montblanc's storytelling with light, playful moments. Instead of overwhelming users, it gently walks them through the core features, from how the writing feels to small nods to Montblanc's craft, like nib-testing gestures and pressure-sensitive strokes.
                 </p>
                 <p>
-                    After lots of testing around flow, timing, and clarity, the walkthrough became both easy to follow and familiar right from the start.
+                    After thorough testing around flow, timing, and clarity, the walkthrough became both easy to follow and familiar right from the start.
                 </p>
                 <p>
                     The Montblanc emblem acts as a progress indicator, revealing itself step by step, creating a sense of ownership and connection to the brand and device.
@@ -424,7 +425,7 @@
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Home</h2>
             <p>
-                The Home screen brings Montblanc's craftsmanship into a calm andminimal environment. Hand-drawn icons and fine linework add a subtle sense of tactility without distracting from the content. The layout stays open so notebooks, documents, and folders remain the clear focus.
+                The Home screen brings Montblanc's craftsmanship into a calm and minimal environment. Hand-drawn icons and fine linework add a subtle sense of tactility without distracting from the content. The layout stays open so notebooks, documents, and folders remain the clear focus.
             </p>
             <p>
                 A floating bottom toolbar provides the primary actions. When an item is selected, the toolbar intelligently shifts into contextual mode, revealing only the actions relevant to that selection. This approach keeps interactions simple and discoverable.
@@ -490,7 +491,7 @@
             </div>
             <div class="body">
                 <p>
-                    The result is a sleek, intuitive device that preserves Montblanc's craftsmanship while embracing modern digital technology, setting a new benchmark in luxury digital writing. It embodies Montblanc's philosophy that everyone can leave their mark, offering the next generation the same tactile precision and joy — now in a more seamless, digital form.
+                    The result is a sleek, intuitive device that preserves Montblanc's craftsmanship while embracing modern digital technology, setting a new benchmark in luxury digital writing. It embodies Montblanc's philosophy that everyone can leave their mark, offering the next generation the same tactile precision and joy.
                 </p>  
             </div>
         </div>
