dec 3 toyota extra s

--- a/toyota.html
+++ b/toyota.html
@@ -59,7 +59,7 @@
               <li>Interaction Design</li>
               <li>User Research and Testing</li>
               <li>Cross-Market Strategy</li>
-              <li>Accessibility and Usability</li>s
+              <li>Accessibility and Usability</li>
             </ul>
 
             <ul class="project-specs">2022</ul>
