--- a/puma.html
+++ b/puma.html
@@ -71,7 +71,7 @@
             <section class="writeup-section grid-col-4of12">
                 <h2 class="section-title">User Flow</h2>
                 <p>
-					Throughout the project, multiple iterations were required as the pavilion's floor plan and technology choices evolved. The diagram below shows the final high-level flow from entry to exit, with each collapsed section detailing the specific user interactions within the experience.
+					Throughout the project, multiple iterations were required as the pavilion's floor plan and technology choices changed. The diagram below is the final flow from entry to exit, with each collapsed section detailing the specific user interactions within the experience.
                 </p>
             </section>
         </div>
@@ -86,11 +86,11 @@
     </div>
 
     <div class="wrapper">
-        <div class="grid-row">
+        <div class="grid-row" style="width:calc(100% - 24px)">
             <section class="writeup-section grid-col-4of12">
                 <h2 class="section-title">Puma Personalization</h2>
                 <p>
-					Before running, users create a personalized Puma avatar to represent themselves in the virtual world. To highlight technology at the forefront, I explored motion gestures for interacting with the personalization screens. Based on research, I selected the most intuitive movements to ensure usability and smooth onboarding. Component layout—size, placement, and distance from the user—was carefully considered so all selections remain easily accessible from a single standing position.
+					Before running, users create a personalized Puma avatar to represent themselves in the virtual world. I explored motion gestures to make the experience feel more intuitve, choosing the ones that felt the most natural based on research. I also paid close attention to how everything was laid out, making sure the size, placement, and distance of each component felt comfortable and easy to reach from one standing position.
                 </p>
             </section>
 
@@ -107,7 +107,7 @@
             <section class="writeup-section grid-col-4of12">
                 <h2 class="section-title">Gesture-Driven Wireframes</h2>
                 <p>
-					After exploring the possibilities and constraints of gesture interactions, I designed wireframes for the personalization screens.
+					After exploring the possibilities and constraints of gesture interactions, I started with the wireframes for the personalization screens.
                 </p>
             </section>
         </div>
@@ -125,22 +125,17 @@
 			</section>
 			<section class="grid-col-3of12">
 				<div class="project-image">
-					<img src="media/puma/img/wire_3.png">
-				</div>
-			</section>
-			<section class="grid-col-3of12">
-				<div class="project-image">
 					<img src="media/puma/img/wire_4.png">
 				</div>
 			</section>
-		</div>
-
-		<div class="grid-row" style="width:calc(100% - 72px)">
 			<section class="grid-col-3of12">
 				<div class="project-image">
 					<img src="media/puma/img/wire_5.png">
 				</div>
 			</section>
+		</div>
+
+		<div class="grid-row" style="width:calc(100% - 72px)">
 			<section class="grid-col-3of12">
 				<div class="project-image">
 					<img src="media/puma/img/wire_6.png">
@@ -156,19 +151,13 @@
 					<img src="media/puma/img/wire_8.png">
 				</div>
 			</section>
-		</div>
-
-		<div class="grid-row" style="width:calc(100% - 72px)">
 			<section class="grid-col-3of12">
 				<div class="project-image">
 					<img src="media/puma/img/wire_9.png">
 				</div>
 			</section>
-			<section class="grid-col-3of12">
-				<div class="project-image">
-					<img src="media/puma/img/wire_10.png">
-				</div>
 		</div>
+
     </div>
 
     <div class="wrapper">
@@ -181,11 +170,6 @@
         </div>
 
         <div class="grid-row" style="width:calc(100% - 72px)">
-			<section class="grid-col-3of12">
-				<div class="project-image">
-					<img src="media/puma/img/final_1.png">
-				</div>
-			</section>
 			<section class="grid-col-3of12">
 				<div class="project-image">
 					<img src="media/puma/img/final_2.png">
@@ -201,14 +185,14 @@
 					<img src="media/puma/img/final_4.png">
 				</div>
 			</section>
-		</div>
-
-        <div class="grid-row" style="width:calc(100% - 72px)">
 			<section class="grid-col-3of12">
 				<div class="project-image">
 					<img src="media/puma/img/final_5.png">
 				</div>
 			</section>
+		</div>
+
+        <div class="grid-row" style="width:calc(100% - 72px)">
 			<section class="grid-col-3of12">
 				<div class="project-image">
 					<img src="media/puma/img/final_6.png">
@@ -224,9 +208,6 @@
 					<img src="media/puma/img/final_8.png">
 				</div>
 			</section>
-		</div>
-
-        <div class="grid-row" style="width:calc(100% - 72px)">
 			<section class="grid-col-3of12">
 				<div class="project-image">
 					<img src="media/puma/img/final_9.png">
@@ -255,11 +236,10 @@
             </div>
             <div class="body">
                 <p>
-                    This was my first time designing for gesture-based interactions, and it pushed me to think beyond the screen and consider the physical, three-dimensional space the experience would live in. It was exciting to imagine how visitors would move within the room—how far they'd stand from the sensor, how large the interaction zone needed to be, and how arm movements or hover gestures could be used for selection.
+                    This was my first time designing for gesture-based interactions, and it pushed me to think beyond the screen and consider the physical, 3D space the experience would live in. It was exciting to imagine how visitors would move within the room, how far they'd stand from the sensor, how large the interaction zone needed to be, and how arm movements or hover gestures could be used for selection.
 				</p>
-				<br>
 				<p>
-					The lack of access to the actual hardware made the early stages a bit challenging, especially when trying to understand the system's real-world limitations. But the research phase was genuinely fun and eye-opening. Learning about gesture ranges, detection distances, ergonomics, and dwell-based selection helped me design interactions that felt intuitive and feasible. Overall, it was a valuable deep-dive into spatial UI thinking and emerging interaction patterns.
+					Not having access to the hardware early on made things a bit challenging, but the research phase was genuinely fun and eye-opening. Learning about gesture ranges, detection distances, and ergonomics was a great deep-dive into spatial UI interaction patterns.
                 </p>
             </div>
         </div>
