--- a/lufthansa.html
+++ b/lufthansa.html
@@ -113,7 +113,7 @@
 				 </p>
             </section>
 
-			<section class="visuals-section grid-col-9of12">
+			<section class="visuals-section grid-col-5of12">
 				<div class="project-image">
 					<img src="media/lufthansa/img/sketch_2.png">
 				</div>
@@ -123,41 +123,13 @@
 		<div class="grid-row">
 			<section class="writeup-section grid-col-3of12">
                 <p>
-					<span style="font-weight: bold;">Destination approach 1:</span> Immerses users in their suggested destination through local stories, month-by-month weather, and a clear path to booking.            
+					Destination: Show a quick snapshot of the destination with a short introductory blurb, with a clear path to booking.
 				 </p>
             </section>
 
-			<section class="visuals-section grid-col-9of12">
+			<section class="visuals-section grid-col-4of12">
 				<div class="project-image">
 					<img src="media/lufthansa/img/sketch_3.png">
-				</div>
-			</section>
-		</div>
-
-		<div class="grid-row">
-			<section class="writeup-section grid-col-3of12">
-                <p>
-					<span style="font-weight: bold;">Destination approach 2:</span> Offers a quick snapshot of the destination with a short introductory blurb, revealing more detail as users interact.         
-				 </p>
-            </section>
-
-			<section class="visuals-section grid-col-9of12">
-				<div class="project-image">
-					<img src="media/lufthansa/img/sketch_4.png">
-				</div>
-			</section>
-		</div>
-
-		<div class="grid-row">
-			<section class="writeup-section grid-col-3of12">
-                <p>
-					<span style="font-weight: bold;">Destination approach 3:</span> Highlights top experiences and must-dos, giving users an immediate sense of what the destination has to offer.      
-				 </p>
-            </section>
-
-			<section class="visuals-section grid-col-9of12">
-				<div class="project-image">
-					<img src="media/lufthansa/img/sketch_5.png">
 				</div>
 			</section>
 		</div>
@@ -221,22 +193,7 @@
 				</div>
 			</section>
         </div>
-
-		<div class="grid-row" style="width:calc(100% - 48px)">
-            <section class="grid-col-4of12">
-				<div class="project-image">
-					<img src="media/lufthansa/img/final_7.png">
-				</div>
-			</section>
-			<section class="grid-col-4of12">
-				<div class="project-image">
-					<img src="media/lufthansa/img/final_8.png">
-				</div>
-			</section>
-        </div>
     </div>
-
-
 
 
 	<div class="outcome-section">
@@ -246,14 +203,11 @@
             </div>
             <div class="body">
                 <p>
-                    What began as a content-heavy experience evolved into a light, curiosity-driven journey—much like my own experience on this project. It was my first time working with Google Cloud Vision, and through learning its capabilities, I was able to craft the “magical” moments in the user experience while also contributing to the development of a custom CMS to manage dynamic content.
+					What started as a content-heavy experience turned into something lighter and more curiosity-driven, which mirrored my own experience on this project. It was my first time working with Google Cloud Vision, and as I learned what it could do, I was able to shape some of the “magical” moments in the experience and help build a custom CMS to manage dynamic content.
 				</p>
             </div>
         </div>
     </div>
-
-
-
 
 
 	<footer class="hidden">
