dec 5 about clients

--- a/about2.html
+++ b/about2.html
@@ -28,11 +28,12 @@
 
 <body>
 
-    <main class="about">
+    <main class="about" style="width: calc(100% - 48px);">
         
 
         <div id="site-header"></div>
 
+        
         <div id="hover-preview"></div>
 
         <div class="right-image-panel grid-col-6of12">
@@ -59,7 +60,7 @@
             <div class="list-wrapper" style="display: flex; flex-direction: column; gap: 8px;">
                 <h2>Clients</h2>
                 <ul>
-                    <li>Adidas / Google / Jacobs Douwe Egberts / Kia / Lexus / Lufthansa / Montblanc / Puma / Somersby / Toyota</li>
+                    <li>Montblanc / Toyota / Lexus / Jacobs Douwe Egberts / Google / Lufthansa / Adidas / Puma / Kia / Somersby</li>
                 </ul>
             </div>
         </div>
